# bonsai-prp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: keep_a_changelog.yml  publish_docker_on_commit_to_master.yml  publish_docker_on_release.yml  publish_on_release.yml  publish_pypi_on_release.yml  pylint.yml  pytest.yml
prp/: __init__.py  __version__.py  bonsai.py  cli.py  exceptions.py  export.py  models.py
prp/analysis/: __init__.py  qc.py
prp/bonsai/: __init__.py  client.py  mappers.py  reportning.py  service.py  state_store.py  steps.py
prp/bonsai_api/: auth.py  bonsai.py
prp/cli/: __init__.py  analysis.py  annotate.py  base.py  bonsai_api.py  parse.py  upload.py  utils.py  validate.py
prp/io/: delimited.py  json.py  manifest.py  types.py  utils.py
prp/migration/: __init__.py  config.py  convert.py
prp/models/: __init__.py  amrfinder.py  analysis.py  base.py  config.py  constants.py  enums.py  hamronization.py  indexes.py  kleborate.py  manifest.py  metadata.py  mykrobe.py  phenotype.py  qc.py  registry.py  resfinder.py  sample.py  species.py  tags.py  tbprofiler.py  typing.py  virulencefinder.py
prp/parse/: __init__.py  amrfinder.py  base.py  chewbacca.py  emmtyper.py  envelope.py  exceptions.py  gambit.py  hamronization.py  igv.py  kleborate.py  kraken.py  metadata.py  mlst.py  mykrobe.py  nanoplot.py  phenotype.py  post_align_qc.py  qc.py  qc.py.save  qc.py.save.1  quast.py  registry.py  resfinder.py  sample.py  samtools.py  sccmec.py  serotypefinder.py  shigapass.py  spatyper.py  species.py  tbprofiler.py  typing.py  utils.py  variant.py  virulencefinder.py
prp/pipeline/: igv.py  loader.py  sample.py  types.py  utils.py  variant.py
tests/: __init__.py  conftest.py  test_cli.py  test_migration.py
tests/fixtures/: __init__.py  fixtures.py
tests/io/: test_delimited.py  test_json.py  test_manifest.py  test_utils.py
tests/models/: test_manifest.py
tests/parse/: test_amrfinder.py  test_bracken.py  test_chewbacca.py  test_core_registry.py  test_emmtyper.py  test_gambit.py  test_hamronization.py  test_kleborate.py  test_metadata.py  test_mlst.py  test_mykrobe.py  test_nanoplot.py  test_post_align_qc.py  test_qc.py  test_quast.py  test_resfinder.py  test_samcoverage.py  test_samtools_qc.py  test_sccmec.py  test_serotypefinder.py  test_shigapass.py  test_spatyper.py  test_tbprofiler.py  (+5 more)
(+74 files in other folders)
